<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="25dp"
    android:paddingLeft="25dp"
    android:paddingRight="25dp">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_sms_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextDialogUserInput"
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:gravity="center"
        android:hint="@string/dialog_sms_placeholder"
        android:inputType="number"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorInputPhone"
        android:textSize="25sp">

        <requestFocus />

    </EditText>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_sms_bottom_text" />

</LinearLayout>