<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:lineSpacingExtra="0sp"
        android:lines="3"
        android:text="@string/screen_login_text"
        android:textColor="@color/colorAccent"
        android:textSize="40sp"
        android:visibility="visible"
        app:fontFamily="@font/baloo_chettan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.150"
        tools:visibility="visible" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="321dp"
        android:layout_height="55dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:textColorHint="@color/colorInputPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputUserPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/screen_login_input_phone"
            android:inputType="phone"
            android:freezesText="true"
            android:textColor="@color/colorInputPhone"
            android:textColorHint="@color/colorInputPhone"
            android:textSize="22sp"
            android:visibility="visible" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonSignin"
        android:layout_width="321dp"
        android:layout_height="57dp"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginRight="45dp"
        android:background="@color/colorAccent"
        android:text="@string/screen_login_button_entrar"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="normal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

</android.support.constraint.ConstraintLayout>